2009-01-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreesortable.c: Improve the docs

	* gtk/gtktreemodelsort.c: Don't assert when using the "unsorted"
	sort column id.

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 565998 – configure script doesn't check for cairo-xlib.pc

	* configure.in: Check for cairo-xlib when looking for
	gdk dependencies. Requested by Alberto Ruiz

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 566334 – compile failure for gtk+ on Mac OS X

	* gtk/gtkstatusicon.c: Fix the build on OS X. 
	Reported by Bart Cortooms.

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 566083 – Icon pixmap hardcoded during DnD

	* gtk/gtkwidget.c:
	* gtk/gtkentry.c: Add docs about using ::drag-begin for setting
	a custom drag icon. Reported by Xan Lopez

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.15.0 ===

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (gtk_entry_set_icon_sensitive): Fix default
	value

	* gtk/tests/builder.c: Clean up asserts, make domain
	test work with current GtkBuilder behaviour.

	* Makefile.decl: Start Xvfb with -ac -noreset to try
	and get the gui tests working.

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols: Add a few forgotten symbols
	* gtk/gtkprintoperation.c:
	* gtk/gtktrayicon-x11.c: Make some functions static

2008-12-31  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-12-31  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkruler.[hc]: Some more

2008-12-31  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkpaned.[hc]:
	* gtk/gtkscale.[hc]:
	* gtk/gtkscrollbar.[hc]: 
	* gtk/gtkseparator.[hc]: Keep these all abstract for now.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Rename the icon signals to ::icon-press and
	::icon-release to avoid clashes with the existing SexyIconEntry